facet-lua/src/snapshots/facet_lua__serializer__tests__bool_and_numbers.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{
    flag = true,
    count = 42,
    score = 3.125,
}
