facet-lua/src/snapshots/facet_lua__serializer__tests__hashmap.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{
    entries = {
        alpha = 1,
        beta = 2,
    },
}
