facet-lua/src/snapshots/facet_lua__serializer__tests__nested_struct.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{
    inner = {
        value = 42,
    },
    name = "test",
}
