facet-lua/src/snapshots/facet_lua__serializer__tests__optional_none.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{
    required = "yes",
    optional = nil,
}
