facet-lua/src/snapshots/facet_lua__serializer__tests__optional_some.snap
---
source: facet-lua/src/serializer.rs
expression: lua_some
---
{
    required = "yes",
    optional = "value",
}
