facet-lua/src/snapshots/facet_lua__serializer__tests__string_escaping.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{content="hello \"world\"\nnew\tline\\backslash"}
