facet-lua/src/snapshots/facet_lua__serializer__tests__vec.snap
---
source: facet-lua/src/serializer.rs
expression: lua
---
{
    items = {
        "hello",
        "world",
    },
}
